k8s-disabled-apps/linkding/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkding
  namespace: linkding
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  type: ClusterIP
  selector:
    app: linkding
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
